fix dark mode lit modal

--- a/theme/lit-share-modal/lit-share-modal.scss
+++ b/theme/lit-share-modal/lit-share-modal.scss
@@ -1,7 +1,3 @@
-:root {
-  --charm-lit-color-white: #fff;
-}
-
 /** react-select is used by lit-share-modal */
 .react-select__menu-portal {
   z-index: 99999;
@@ -165,6 +161,7 @@
     }
   }
 
+  &.lsm-bg-white,
   .lsm-bg-white {
     background-color: var(--charm-lit-color-white);
   }
